# stacksniper

./: .gitignore  README.md  lefthook.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  code-review.yml
src/stacksniper/: __init__.py  fingerprint.py  intercept.py  serializer.py  setup.py  sink.py
tests/: test_duckdb_integration.py  test_fingerprint.py  test_serializer.py  test_setup.py
